--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,15 @@
     {
         "php":">=5.3.3"
     },
+    "require-dev":     
+    {      
+        "behat/behat": "2.4.*@stable",     
+        "behat/mink": "1.4@stable",        
+        "behat/mink-extension": "*",       
+        "behat/mink-goutte-driver": "1.0.*@dev",       
+        "crada/php-apidoc": "@dev",     
+        "robmorgan/phinx": "*"     
+    },
     "autoload":
     {
         "psr-4":
